--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     
     /* LIVE NOW CARDS */
     .live-row{display:grid; grid-template-columns:repeat(auto-fit, minmax(300px, 1fr)); gap:14px}
-    .live-card{background:var(--panel); border:1px solid #e2e8f0; border-radius:var(--radius); padding:14px; box-shadow:var(--shadow)}
+    .live-card{background:var(--); border:1px solid var(--brand); border-radius:var(--radius); padding:14px; box-shadow: 0 4px 20px rgba(250, 204, 21, 0.25)}
     .live-head{display:flex; align-items:center; gap:10px; margin-bottom:10px; flex-wrap: wrap;}
     .odds{display:grid; grid-template-columns:1fr 1fr; gap:10px}
     .odd{display:flex; align-items:center; justify-content:space-between; gap:10px; background:#f7fafc; border:1px solid #e2e8f0; padding:8px 10px; border-radius:12px; color:var(--text)}
